--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js-rpc",
+  "name": "js-rpc2",
   "version": "1.0.0",
   "description": "js web websocket http rpc",
   "main": "index.js",
