--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "@types/node": "^22.13.14",
     "koa": "^2.15.3",
     "ws": "^8.18.0"
+  },
+  "dependencies": {
+    "msgpackr": "^1.11.5"
   }
 }
